@@ -395,4 +395,5 @@
 0.3.13 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Added mkfatfs command to NSH
+	* Added mkfifo command to NSH
 
